// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table 1`] = `
<Fragment>
  <p
    aria-hidden={true}
    className="row-selected-help-text"
    id="terra-table-help-1"
  >
    Terra.table.selectRow
  </p>
  <table
    className="table striped padded"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
  >
    <TableHeader
      key=".0"
    >
      <TableHeaderCell
        content="Name"
        key="NAME"
        minWidth="small"
      />
      <TableHeaderCell
        content="Address"
        key="ADDRESS"
        minWidth="small"
      />
      <TableHeaderCell
        content="Phone Number"
        key="PHONE_NUMBER"
        minWidth="small"
      />
    </TableHeader>
    <TableRows
      key=".1"
      selectRowHelpTextId="terra-table-help-1"
    >
      <TableRow
        isSelected={false}
        key="PERSON_0"
      >
        <TableCell
          content="John Smith"
          key="NAME"
        />
        <TableCell
          content="123 Adams Drive"
          key="ADDRESS"
        />
        <TableCell
          content="111-222-3333"
          key="PHONE_NUMBER"
        />
      </TableRow>
      <TableRow
        isSelected={false}
        key="PERSON_1"
      >
        <TableCell
          content="John Smith"
          key="NAME"
        />
        <TableCell
          content="123 Adams Drive"
          key="ADDRESS"
        />
        <TableCell
          content="111-222-3333"
          key="PHONE_NUMBER"
        />
      </TableRow>
    </TableRows>
  </table>
</Fragment>
`;

exports[`should render a table without padding 1`] = `
<Fragment>
  <p
    aria-hidden={true}
    className="row-selected-help-text"
    id="terra-table-help-3"
  >
    Terra.table.selectRow
  </p>
  <table
    className="table striped"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
  >
    <TableHeader
      key=".0"
    >
      <TableHeaderCell
        content="Name"
        key="NAME"
        minWidth="small"
      />
      <TableHeaderCell
        content="Address"
        key="ADDRESS"
        minWidth="small"
      />
      <TableHeaderCell
        content="Phone Number"
        key="PHONE_NUMBER"
        minWidth="small"
      />
    </TableHeader>
    <TableRows
      key=".1"
      selectRowHelpTextId="terra-table-help-3"
    >
      <TableRow
        isSelected={false}
        key="PERSON_0"
      >
        <TableCell
          content="John Smith"
          key="NAME"
        />
        <TableCell
          content="123 Adams Drive"
          key="ADDRESS"
        />
        <TableCell
          content="111-222-3333"
          key="PHONE_NUMBER"
        />
      </TableRow>
      <TableRow
        isSelected={false}
        key="PERSON_1"
      >
        <TableCell
          content="John Smith"
          key="NAME"
        />
        <TableCell
          content="123 Adams Drive"
          key="ADDRESS"
        />
        <TableCell
          content="111-222-3333"
          key="PHONE_NUMBER"
        />
      </TableRow>
    </TableRows>
  </table>
</Fragment>
`;

exports[`should render a table without zebra stripes 1`] = `
<Fragment>
  <p
    aria-hidden={true}
    className="row-selected-help-text"
    id="terra-table-help-2"
  >
    Terra.table.selectRow
  </p>
  <table
    className="table padded"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
  >
    <TableHeader
      key=".0"
    >
      <TableHeaderCell
        content="Name"
        key="NAME"
        minWidth="small"
      />
      <TableHeaderCell
        content="Address"
        key="ADDRESS"
        minWidth="small"
      />
      <TableHeaderCell
        content="Phone Number"
        key="PHONE_NUMBER"
        minWidth="small"
      />
    </TableHeader>
    <TableRows
      key=".1"
      selectRowHelpTextId="terra-table-help-2"
    >
      <TableRow
        isSelected={false}
        key="PERSON_0"
      >
        <TableCell
          content="John Smith"
          key="NAME"
        />
        <TableCell
          content="123 Adams Drive"
          key="ADDRESS"
        />
        <TableCell
          content="111-222-3333"
          key="PHONE_NUMBER"
        />
      </TableRow>
      <TableRow
        isSelected={false}
        key="PERSON_1"
      >
        <TableCell
          content="John Smith"
          key="NAME"
        />
        <TableCell
          content="123 Adams Drive"
          key="ADDRESS"
        />
        <TableCell
          content="111-222-3333"
          key="PHONE_NUMBER"
        />
      </TableRow>
    </TableRows>
  </table>
</Fragment>
`;
